Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76033

[REG 5.9->5.10] Type Error when assigning certain JavaScript properties

    XMLWordPrintable

Details

    • macOS

    Description

      Hi, I get `Type Error` errors in my project since I have moved to Qt 5.12.3.

      I've been able to create a basic example that reproduce the problem.

      Just look at the below repository:

      https://github.com/oltodo/qml-type-error

       

      My project uses NPM packages bundlized through Webpack. It was working well before I updated the Qt version.

       

      Someone would be able to find what happened?

      Regards.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            oltodo Nicolas Bazille
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes